Update portfolio again

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
               data-src="https://www.jarrodyellets.com/images/hapi.png" class="portfolioImg pImg" id="pol1"
               alt="hapi.dev">
           </div>
-          <p class="text">Built with Nuxt.js, hapi.dev is the home of the hapi.js framework.  Provides users with all of the necessary resources about the hapi.js framework.</p>
+          <p class="text">Built with Nuxt.js, hapi.dev is the home of the hapi.js framework.  Allows users to view framework documentation, real-time module statuses, and access support.</p>
           <div class="built" id="built1">Built With:</div>
           <p class="builtWith">Nuxt.js,  Node, and hapi.js</p>
           <div className="buttonWrapper">
@@ -165,11 +165,10 @@
             data-src="https://www.jarrodyellets.com/images/lumbarPolBlank.png" class="portfolioImg portfolioImgBlank"
             alt="lumbar yard">
           <img src="data:image/png;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs="
-            data-src="https://www.jarrodyellets.com/images/lumbarPol.png" class="portfolioImg pImg" id="pol3"
+            data-src="https://www.jarrodyellets.com/images/lumbar.png" class="portfolioImg pImg" id="pol3"
             alt="lumbar yard">
         </div>
-        <p class="text">E-commerce site for mattress company, The Lumbar Yard. The site allows users to search for and
-          buy mattresses with any major credit card.</p>
+        <p class="text">E-commerce store that allows users to search for and purchase mattresses with any major credit card.</p>
         <div class="built" id="built2">Built With:</div>
         <p class="builtWith">HTML, CSS, JavaScript, React, Node, and Hapi.js</p>
         <div className="buttonWrapper">
@@ -186,10 +185,10 @@
             data-src="https://www.jarrodyellets.com/images/pillowPolBlank.png" class="portfolioImg portfolioImgBlank"
             alt="pillow real estate">
           <img src="data:image/png;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs="
-            data-src="https://www.jarrodyellets.com/images/pillowPol.png" class="portfolioImg pImg" id="pol2"
+            data-src="https://www.jarrodyellets.com/images/pillow.png" class="portfolioImg pImg" id="pol2"
             alt="pillow real estate">
         </div>
-        <p class="text">Built with React, the Pillow real estate portal allows you to search and view homes for sale or
+        <p class="text">Built with React, the Pillow real estate search platform allows you to search and view homes for sale or
           rent. The design is based on Zillow.com.</p>
         <div class="built" id="built3">Built With:</div>
         <p class="builtWith">HTML, CSS, JavaScript, React, Redux, Node, and Google Maps API</p>
