--- a/index.html
+++ b/index.html
@@ -84,11 +84,9 @@
         <h3 class="subHeader whoAmI underlineWho">Who Am I:</h3>
         <div class="aboutMe">
           <p class="text">
-            My name is Jarrod Yellets and I am a full stack web developer and digital nomad residing in Brussels,
-            Belgium. When I'm not
-            behind the keyboard, you can find me running, boxing, chasing my Golden Retriever, Padm&#233, or traveling
-            Europe with my wife and daughter.
-          </p>
+            My name is Jarrod Yellets and I currently live in Brussels, Belgium. I work remotely for Sideway Inc. as a full stack engineer where I built and maintain the 
+            hapi.dev developer portal and help support the hapi.js framework. When I'm not working, you can me running, boxing, chasing my Golden Retriever Padm&#233, or traveling 
+            Europe with my wife and daughter.</p>
         </div>
       </div>
       <div class="stack">
