--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta name="theme-color" content="#333333">
   <link rel="icon" href="https://www.jarrodyellets.com/images/photoIcon.png">
   <title>Jarrod Yellets</title>
-  <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+  <script type="text/javascript" src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="assets/css/index.css">
   <script type="text/javascript" src="assets/js/index.js"></script>
@@ -85,7 +85,7 @@
         <div class="aboutMe">
           <p class="text">
             My name is Jarrod Yellets and I currently live in Brussels, Belgium. I work remotely for Sideway Inc. as a full stack engineer where I built and maintain the 
-            hapi.dev developer portal and help support the hapi.js framework. When I'm not working, you can me running, boxing, chasing my Golden Retriever Padm&#233, or traveling 
+            hapi.dev developer portal and help support the hapi.js framework. When I'm not working, you can find me running, boxing, chasing my Golden Retriever Padm&#233, or traveling 
             Europe with my wife and daughter.</p>
         </div>
       </div>
