--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="keywords" content="Jarrod Yellets, Portfolio, jarrodyellets, full stack">
   <meta name="author" content="Jarrod Yellets">
-  <meta name="description" content="Jarrod Yellets | Full Stack Engineer @Sideway INC">
+  <meta hid='description', name='description', content="Jarrod Yellets | Full Stack Engineer @Sideway INC">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="theme-color" content="#333333">
   <link rel="icon" href="https://www.jarrodyellets.com/images/photoIcon.png">
