--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
         </div>
         <p class="text">E-commerce store that allows users to search for and purchase mattresses with any major credit card.</p>
         <div class="built" id="built2">Built With:</div>
-        <p class="builtWith">HTML, CSS, JavaScript, React, Node, and Hapi.js</p>
+        <p class="builtWith">HTML, CSS, JavaScript, React, Node, and hapi.js</p>
         <div className="buttonWrapper">
           <a href="https://thawing-hollows-26630.herokuapp.com/" target="_blank" rel="noopener"><button
               class="btn hvr-underline-from-left">Launch!</button></a><a
