--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <div class="heroAboutText">Name: <span class="heroSpan">Jarrod Yellets</span></div>
         <div class="heroAboutText">Location: <span class="heroSpan">Brussels, Belgium</span></span></div>
         <div class="heroAboutText">Position: <span class="heroSpan">Full Stack Engineer</span></span></div>
-        <div class="heroAboutText">Company: <span class="heroSpan">Sideway INC.</span></span></div>
+        <div class="heroAboutText">Company: <span class="heroSpan">EMAX Group</span></span></div>
       </div>
     </div>
     <div class="downArrowWrapper">
@@ -84,8 +84,8 @@
         <h3 class="subHeader whoAmI underlineWho">Who Am I:</h3>
         <div class="aboutMe">
           <p class="text">
-            My name is Jarrod Yellets and I currently live in Brussels, Belgium. I work remotely for Sideway Inc. as a full stack engineer where I built and maintain the 
-            hapi.dev developer portal and help support the hapi.js framework. When I'm not working, you can find me running, boxing, chasing my Golden Retriever Padm&#233, or traveling 
+            My name is Jarrod Yellets and I currently live in Brussels, Belgium. I'm a full stack engineer at EMAX Group where I build tools to help with green energy digitalization. 
+            I'm also part of the hapi.js web team where I built and maintain the hapi.js developer portal and help support the hapi.js framework. When I'm not working, you can find me running, boxing, chasing my Golden Retriever Padm&#233, or traveling 
             Europe with my wife and daughter.</p>
         </div>
       </div>
@@ -111,20 +111,22 @@
               <div class="stackText stack-hash" id="stack9">Node.js</div>
               <div class="stackText stack-hash" id="stack10">hapi.js</div>
               <div class="stackText stack-hash" id="stack11">Express.js</div>
-              <div class="stackText stack-hash" id="stack12">mongoDB</div>
+              <div class="stackText stack-hash" id="stack12">PHP/Laravel</div>
+              <div class="stackText stack-hash" id="stack13">MySQL</div>
+              <div class="stackText stack-hash" id="stack14">mongoDB</div>
             </div>
           </div>
           <div class="toolWrapper toolEtc">
             <div class="toolHeader etc">Other</div>
             <div class="toolSec">
-              <div class="stackText stack-hash" id="stack13">TypeScript</div>
-              <div class="stackText stack-hash" id="stack14">lab/Mocha</div>
-              <div class="stackText stack-hash" id="stack15">Git/Gitflow</div>
-              <div class="stackText stack-hash" id="stack16">ESLint</div>
-              <div class="stackText stack-hash" id="stack17">AJAX</div>
-              <div class="stackText stack-hash" id="stack18">GraphQL</div>
-              <div class="stackText stack-hash" id="stack19">Socket.io</div>
-              <div class="stackText stack-hash" id="stack20">Photoshop</div>
+              <div class="stackText stack-hash" id="stack15">TypeScript</div>
+              <div class="stackText stack-hash" id="stack16">lab/Mocha</div>
+              <div class="stackText stack-hash" id="stack17">Git/Gitflow</div>
+              <div class="stackText stack-hash" id="stack18">ESLint</div>
+              <div class="stackText stack-hash" id="stack19">AJAX</div>
+              <div class="stackText stack-hash" id="stack20">GraphQL</div>
+              <div class="stackText stack-hash" id="stack21">Socket.io</div>
+              <div class="stackText stack-hash" id="stack22">Photoshop</div>
             </div>
           </div>
         </div>
