--- a/index.html
+++ b/index.html
@@ -126,7 +126,8 @@
               <div class="stackText stack-hash" id="stack19">AJAX</div>
               <div class="stackText stack-hash" id="stack20">GraphQL</div>
               <div class="stackText stack-hash" id="stack21">Socket.io</div>
-              <div class="stackText stack-hash" id="stack22">Photoshop</div>
+              <div class="stackText stack-hash" id="stack22">Microsoft Azure</div>
+              <div class="stackText stack-hash" id="stack23">Photoshop</div>
             </div>
           </div>
         </div>
@@ -159,6 +160,23 @@
                 Code</button></a>
           </div>
         </div>
+        <div class="portfolioItem">
+          <div class="imgWrapper">
+            <img src="data:image/png;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs="
+              data-src="https://www.jarrodyellets.com/images/emaxBlank.png" class="portfolioImg portfolioImgBlank"
+              alt="pillow real estate">
+            <img src="data:image/png;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs="
+              data-src="https://www.jarrodyellets.com/images/emaxPol.png" class="portfolioImg pImg" id="pol2"
+              alt="pillow real estate">
+          </div>
+          <p class="text">Designed and built company website for EMAX Group. Built with Vue with a little help from Node, the site showcases company products, services, and vision.</p>
+          <div class="built" id="built3">Built With:</div>
+          <p class="builtWith">Nuxt.js, Vue, Node</p>
+          <div className="buttonWrapper">
+            <a href="https://emaxgroup.eu/" target="_blank" rel="noopener"><button
+                class="btn hvr-underline-from-left">Launch!</button></a>
+          </div>
+        </div>
       <div class="portfolioItem">
         <div class="imgWrapper">
           <img src="data:image/png;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs="
@@ -175,27 +193,6 @@
           <a href="https://thawing-hollows-26630.herokuapp.com/" target="_blank" rel="noopener"><button
               class="btn hvr-underline-from-left">Launch!</button></a><a
             href="https://github.com/jarrodyellets/lumbarYard" target="_blank" rel="noopener"><button
-              class="btn hvr-underline-from-left">View
-              Code</button></a>
-        </div>
-      </div>
-      <div class="portfolioItem">
-        <div class="imgWrapper">
-          <img src="data:image/png;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs="
-            data-src="https://www.jarrodyellets.com/images/pillowPolBlank.png" class="portfolioImg portfolioImgBlank"
-            alt="pillow real estate">
-          <img src="data:image/png;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs="
-            data-src="https://www.jarrodyellets.com/images/pillow.png" class="portfolioImg pImg" id="pol2"
-            alt="pillow real estate">
-        </div>
-        <p class="text">Built with React, the Pillow real estate search platform allows you to search and view homes for sale or
-          rent. The design is based on Zillow.com.</p>
-        <div class="built" id="built3">Built With:</div>
-        <p class="builtWith">HTML, CSS, JavaScript, React, Redux, Node, and Google Maps API</p>
-        <div className="buttonWrapper">
-          <a href="https://shielded-plains-18488.herokuapp.com/" target="_blank" rel="noopener"><button
-              class="btn hvr-underline-from-left">Launch!</button></a><a
-            href="https://github.com/jarrodyellets/realEstate" target="_blank" rel="noopener"><button
               class="btn hvr-underline-from-left">View
               Code</button></a>
         </div>
